# rectgrid

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflow/: pages.yml
.github/workflows/: pages.yml
examples/: Cargo.toml  README.md  index.html  init.js  worker.js
examples/css/: button.css  config.css  heading.css  style.css
examples/src/: app.rs  event.rs  js_client.rs  lib.rs  ugrid.rs
src/: geometry.rs  lib.rs  rectgrid.rs
