[package]
name = "rectgrid"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Region operations on rectilinear grids with arbitrary unit systems."
license = "Apache-2.0"
repository = "https://github.com/animagram-jp/rectgrid"
readme = "README.md"
keywords = ["layout", "grid", "bbox", "geometry", "no-std"]
categories = ["graphics", "gui", "data-structures", "no-std"]
exclude = ["examples/"]

[dependencies]
libm = "0.2"
